--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
                     <div ngbDropdownMenu aria-labelledby="navbarDropdown" class="dropdown-menu custom-dropdown-menu">
                         <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['pedido']">Novo</a>
                         <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['pedidos']">Listar</a>
-                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['manutencao-roupa']">Consultar</a>
+                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['consulta-pedido']">Consultar</a>
                     </div>
                 </li>
                 <li class="nav-item">
