--- a/client/src/app/auth/cadastro/cadastro.component.html
+++ b/client/src/app/auth/cadastro/cadastro.component.html
@@ -1,76 +1,197 @@
 <div class="background">
-    <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-        <div class="container">
-            <div class="card shadow-lg custom-card border-0">
-                <div class="card-body">
-                    <div class="container-logo">
-                        <img src="assets/logo-lol.png" alt="Logo" style="width: 100px; height: auto; margin-bottom: 20px;">
-                        <h1 id="cadastro-text">Autocadastro</h1>
-                    </div>
-                    <form #formCadastro="ngForm" class="container-form d-flex flex-column justify-content-center">
-                        <div class="imput-form">
-                            <div id="form-floating-cpf">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control custom-input" id="cpf" name="cpf" placeholder=" " [(ngModel)]="cadastroCPF" #cpf="ngModel" required [class.invalid-border]="cpf.invalid && (cpf.dirty || cpf.touched)">
-                                    <label for="cpf">CPF:</label>
-                                </div>
-                                <div *ngIf="cpf.errors && (cpf.dirty || cpf.touched)" class="left-align text-danger">
-                                    <div [hidden]="!cpf?.errors?.['required']">Insira seu CPF</div>
-                                </div>
-                            </div>
-                            <div id="form-floating-nome">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control custom-input" id="nome" name="nome" placeholder=" " [(ngModel)]="cadastroNome" #nome="ngModel" required [class.invalid-border]="nome.invalid && (nome.dirty || nome.touched)">
-                                    <label for="nome">Nome:</label>
-                                </div>
-                                <div *ngIf="nome.errors && (nome.dirty || nome.touched)" class="left-align text-danger">
-                                    <div [hidden]="!nome?.errors?.['required']">Insira seu nome</div>
-                                </div>
-                            </div>
-                            <div id="form-floating-email">
-                                <div class="form-floating">
-                                    <input type="email" class="form-control custom-input" id="email" name="email" placeholder=" " [(ngModel)]="cadastroEmail" #email="ngModel" required [class.invalid-border]="email.invalid && (email.dirty || email.touched)">
-                                    <label for="email">Email:</label>
-                                </div>
-                                <div *ngIf="email.errors && (email.dirty || email.touched)" class="left-align text-danger">
-                                    <div [hidden]="!email?.errors?.['required']">Insira seu email</div>
-                                    <div [hidden]="!email?.errors?.['email']">Formato de email inválido</div>
-                                </div>
-                            </div>
-                            <div id="form-floating-endereco">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control custom-input" id="endereco" name="endereco" placeholder=" " [(ngModel)]="CadastroEndereco" #endereco="ngModel" required [class.invalid-border]="endereco.invalid && (endereco.dirty || endereco.touched)">
-                                    <label for="endereco">Endereço:</label>
-                                </div>
-                                <div *ngIf="endereco.errors && (endereco.dirty || endereco.touched)" class="left-align text-danger">
-                                    <div [hidden]="!endereco?.errors?.['required']">Insira seu endereço</div>
-                                </div>
-                            </div>
-                            <div id="form-floating-complemento">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control custom-input" id="complemento" name="complemento" placeholder=" " [(ngModel)]="CadastroComplemento" #complemento="ngModel">
-                                    <label for="complemento">Complemento:</label>
-                                </div>
-                            </div>
-                            <div id="form-floating-telefone">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control custom-input" id="telefone" name="telefone" placeholder=" " [(ngModel)]="CadastroTelefone" #telefone="ngModel" required [class.invalid-border]="telefone.invalid && (telefone.dirty || telefone.touched)">
-                                    <label for="telefone">Telefone:</label>
-                                </div>
-                                <div *ngIf="telefone.errors && (telefone.dirty || telefone.touched)" class="left-align text-danger">
-                                    <div [hidden]="!telefone?.errors?.['required']">Insira seu telefone</div>
-                                </div>
-                            </div>
-                            <div class="container-link mt-auto">
-                                <a id="text-login">Já tem uma conta? </a><a id="text-login-link" routerLink="/login">Fazer Login</a>
-                            </div>
-                            <div class="container-button">
-                                <button type="submit" class="btn btn-primary custom-btn" (click)="cadastro()" [disabled]="!formCadastro.form.valid">Cadastrar</button>
-                            </div>
-                        </div>
-                    </form>
-                <div>
-            </div>
+  <div
+    class="d-flex justify-content-center align-items-center"
+    style="height: 100vh"
+  >
+    <div class="container">
+      <div class="card shadow-lg custom-card border-0">
+        <div class="card-body">
+          <div class="container-logo">
+            <img
+              src="assets/logo-lol.png"
+              alt="Logo"
+              style="width: 100px; height: auto; margin-bottom: 20px"
+            />
+            <h1 id="cadastro-text">Autocadastro</h1>
           </div>
+          <form
+            #formCadastro="ngForm"
+            class="container-form d-flex flex-column justify-content-center"
+          >
+            <div class="imput-form">
+              <div id="form-floating-cpf">
+                <div class="form-floating">
+                  <input
+                    type="text"
+                    class="form-control custom-input"
+                    id="cpf"
+                    name="cpf"
+                    placeholder=" "
+                    [(ngModel)]="cadastroCPF"
+                    #cpf="ngModel"
+                    required
+                    [class.invalid-border]="
+                      cpf.invalid && (cpf.dirty || cpf.touched)
+                    "
+                    mask="000.000.000-00"
+                  />
+                  <label for="cpf">CPF:</label>
+                </div>
+                <div
+                  *ngIf="cpf.errors && (cpf.dirty || cpf.touched)"
+                  class="left-align text-danger"
+                >
+                  <div [hidden]="!cpf?.errors?.['required']">
+                    Insira seu CPF
+                  </div>
+                </div>
+              </div>
+              <div id="form-floating-nome">
+                <div class="form-floating">
+                  <input
+                    type="text"
+                    class="form-control custom-input"
+                    id="nome"
+                    name="nome"
+                    placeholder=" "
+                    [(ngModel)]="cadastroNome"
+                    #nome="ngModel"
+                    required
+                    [class.invalid-border]="
+                      nome.invalid && (nome.dirty || nome.touched)
+                    "
+                    letras-somente
+                  />
+                  <label for="nome">Nome:</label>
+                </div>
+                <div
+                  *ngIf="nome.errors && (nome.dirty || nome.touched)"
+                  class="left-align text-danger"
+                >
+                  <div [hidden]="!nome?.errors?.['required']">
+                    Insira seu nome
+                  </div>
+                </div>
+              </div>
+              <div id="form-floating-email">
+                <div class="form-floating">
+                  <input
+                    type="email"
+                    class="form-control custom-input"
+                    id="email"
+                    name="email"
+                    placeholder=" "
+                    [(ngModel)]="cadastroEmail"
+                    #email="ngModel"
+                    required
+                    [class.invalid-border]="
+                      email.invalid && (email.dirty || email.touched)
+                    "
+                  />
+                  <label for="email">Email:</label>
+                </div>
+                <div
+                  *ngIf="email.errors && (email.dirty || email.touched)"
+                  class="left-align text-danger"
+                >
+                  <div [hidden]="!email?.errors?.['required']">
+                    Insira seu email
+                  </div>
+                  <div [hidden]="!email?.errors?.['email']">
+                    Formato de email inválido
+                  </div>
+                </div>
+              </div>
+              <div id="form-floating-endereco">
+                <div class="form-floating">
+                  <input
+                    type="text"
+                    class="form-control custom-input"
+                    id="endereco"
+                    name="endereco"
+                    placeholder=" "
+                    [(ngModel)]="CadastroEndereco"
+                    #endereco="ngModel"
+                    required
+                    [class.invalid-border]="
+                      endereco.invalid && (endereco.dirty || endereco.touched)
+                    "
+                  />
+                  <label for="endereco">Endereço:</label>
+                </div>
+                <div
+                  *ngIf="
+                    endereco.errors && (endereco.dirty || endereco.touched)
+                  "
+                  class="left-align text-danger"
+                >
+                  <div [hidden]="!endereco?.errors?.['required']">
+                    Insira seu endereço
+                  </div>
+                </div>
+              </div>
+              <div id="form-floating-complemento">
+                <div class="form-floating">
+                  <input
+                    type="text"
+                    class="form-control custom-input"
+                    id="complemento"
+                    name="complemento"
+                    placeholder=" "
+                    [(ngModel)]="CadastroComplemento"
+                    #complemento="ngModel"
+                  />
+                  <label for="complemento">Complemento:</label>
+                </div>
+              </div>
+              <div id="form-floating-telefone">
+                <div class="form-floating">
+                  <input
+                    type="text"
+                    class="form-control custom-input"
+                    id="telefone"
+                    name="telefone"
+                    placeholder=" "
+                    [(ngModel)]="CadastroTelefone"
+                    #telefone="ngModel"
+                    required
+                    [class.invalid-border]="
+                      telefone.invalid && (telefone.dirty || telefone.touched)
+                    "
+                    mask="(00) 0 0000-0000"
+                  />
+                  <label for="telefone">Telefone:</label>
+                </div>
+                <div
+                  *ngIf="
+                    telefone.errors && (telefone.dirty || telefone.touched)
+                  "
+                  class="left-align text-danger"
+                >
+                  <div [hidden]="!telefone?.errors?.['required']">
+                    Insira seu telefone
+                  </div>
+                </div>
+              </div>
+              <div class="container-link mt-auto">
+                <a id="text-login">Já tem uma conta? </a
+                ><a id="text-login-link" routerLink="/login">Fazer Login</a>
+              </div>
+              <div class="container-button">
+                <button
+                  type="submit"
+                  class="btn btn-primary custom-btn"
+                  (click)="cadastro()"
+                  [disabled]="!formCadastro.form.valid"
+                >
+                  Cadastrar
+                </button>
+              </div>
+            </div>
+          </form>
+          <div></div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
