--- a/client/src/app/funcionario-pages/visualizacao-pedidos/visualizacao-pedidos.component.html
+++ b/client/src/app/funcionario-pages/visualizacao-pedidos/visualizacao-pedidos.component.html
@@ -30,18 +30,18 @@
                 </tr>
                 <tr *ngFor="let pedido of orderedPedidos">
                     <td>{{pedido.id}}</td>
-                    <td>{{formatDate(pedido.dataCriacao)}}</td>
-                    <td>{{pedido.roupas}}</td>
-                    <td>{{pedido.prazoServico}}</td>
-                    <td [ngClass]="getStatusColor(pedido.situacao)">{{pedido.situacao}}</td>
+                    <td>{{formatDate(pedido.dataPedido)}}</td>
+                    <td>{{pedido.listaPedidoRoupa}}</td>
+                    <td>{{pedido.orcamento.dataPrazo}}</td>
+                    <td [ngClass]="getStatusColor(pedido.situacao.tipoSituacao)">{{pedido.situacao.tipoSituacao}}</td>
                     <td>
-                        <button *ngIf="pedido.situacao === 'EM ABERTO'" class="btn btn-success" (click)="recolherPedido(pedido)">Recolher</button>
+                        <button *ngIf="pedido.situacao.tipoSituacao === 'EM ABERTO'" class="btn btn-success" (click)="recolherPedido(pedido)">Recolher</button>
                     </td>
                     <td>
-                        <button *ngIf="pedido.situacao === 'RECOLHIDO'" class="btn btn-success" (click)="confirmarLavagem(pedido)">Confirmar Lavagem</button>
+                        <button *ngIf="pedido.situacao.tipoSituacao === 'RECOLHIDO'" class="btn btn-success" (click)="confirmarLavagem(pedido)">Confirmar Lavagem</button>
                     </td>
                     <td>
-                        <button *ngIf="pedido.situacao === 'AGUARDANDO PAGAMENTO'" class="btn btn-success" (click)="finalizarPedido(pedido)">Finalizar Pedido</button>
+                        <button *ngIf="pedido.situacao.tipoSituacao === 'AGUARDANDO PAGAMENTO'" class="btn btn-success" (click)="finalizarPedido(pedido)">Finalizar Pedido</button>
                     </td>
                 </tr>
             </table>
