--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -1,3 +1,16 @@
+<div
+  *ngIf="message"
+  class="alert alert-danger alert-dismissible fade show"
+  role="alert"
+>
+  {{ message }}
+  <button
+    type="button"
+    class="btn-close"
+    data-bs-dismiss="alert"
+    aria-label="Close"
+  ></button>
+</div>
 <div class="background">
   <div
     class="d-flex justify-content-center align-items-center"
@@ -27,23 +40,27 @@
                     name="email"
                     id="email"
                     placeholder=" "
-                    [(ngModel)]="emailUser"
-                    #email="ngModel"
+                    [(ngModel)]="login.login"
+                    #usuario="ngModel"
                     required
                     [class.invalid-border]="
-                      email.invalid && (email.dirty || email.touched)
+                      usuario.invalid && (usuario.dirty || usuario.touched)
                     "
+                    
                     (focus)="clearLoginError()"
                   />
-                  <label for="email">E-mail</label>
+                  <label for="usuario">E-mail</label>
                 </div>
               </div>
               <div
-                *ngIf="email.errors && (email.dirty || email.touched)"
+                *ngIf="usuario.errors && (usuario.dirty || usuario.touched)"
                 class="left-align text-danger"
               >
-                <div [hidden]="!email?.errors?.['required']">
+                <div [hidden]="!usuario?.errors?.['required']">
                   Insira seu e-mail
+                </div>
+                <div [hidden]="!usuario?.errors?.['email']">
+                  Formato de email inválido
                 </div>
               </div>
             </div>
@@ -56,24 +73,24 @@
                     class="form-control custom-input"
                     name="password"
                     id="password"
-                    placeholder=" "
-                    [(ngModel)]="passwordUser"
-                    #password="ngModel"
+                    placeholder="login e senha iguais: cliente/cliente funcionario/funcionario"
+                    [(ngModel)]="login.senha"
+                    #senha="ngModel"
                     required
                     [class.invalid-border]="
-                      password.invalid && (password.dirty || password.touched)
+                      senha.invalid && (senha.dirty || senha.touched)
                     "
                     (focus)="clearLoginError()"
-                    numerico
                   />
-                  <label for="password">Senha</label>
+                  <label for="senha">Senha</label>
+                  <p>login e senha iguais: cliente/cliente funcionario/funcionario</p>
                 </div>
               </div>
               <div
-                *ngIf="password.errors && (password.dirty || password.touched)"
+                *ngIf="senha.errors && (senha.dirty || senha.touched)"
                 class="left-align text-danger"
               >
-                <div [hidden]="!password?.errors?.['required']">
+                <div [hidden]="!senha?.errors?.['required']">
                   Insira sua senha
                 </div>
               </div>
@@ -91,7 +108,7 @@
               <button
                 type="submit"
                 class="btn btn-primary custom-btn"
-                (click)="login()"
+                (click)="logar()"
                 [disabled]="!formLogin.form.valid"
               >
                 Entrar
